edit konfigurasi port
